[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "A template for building applications for ARM Cortex-M microcontrollers"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "cortex-m-quickstart"
repository = "https://github.com/japaric/cortex-m-quickstart"
version = "0.2.1"

[dependencies]
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"
bare-metal = "0.1.1"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[dependencies.lpc1347]
features = ["rt"] # see comment above
version = "0.1.2"
git = "https://github.com/ax-rwnd/rust-lpc1347.git"

[profile.release]
debug = true
lto = true
